--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <tr>
       <td><img src="https://cdn.glitch.global/9c8f7bbe-71ec-4d3d-9bac-09389c688853/fff.jpg?v=1650545883364" alt="Filip" height="200px" width="150px"></td>
       <td><p><em>Ceo of <strong><a href="https://www.appbrewery.com/">Filip's company</a></strong>.</em></p>
-      <p>I am web developer with one year expirience</p></td>
+      <p>I am a photographer with one year expirience</p></td>
     </tr>
   </table>
   <h1>Filip's site</h1>
@@ -46,10 +46,6 @@
       <td>Photography landscape book</td>
     </tr>
   </tbody>
-  <tfoot>
- 
-  </tfoot>
-
 </table>
 <hr size="2" noshade />
 <h3>Skills</h3>
